Fixed download bar missing background color

--- a/css/context.css
+++ b/css/context.css
@@ -105,7 +105,9 @@
 		border-width: 0 2px 2px 0px;
 		transform: rotate(-45deg) scale(.55);
 	}
-
+	.menu-accel {
+		padding: 0px !important;
+	}
 	tooltip {
 		-moz-appearance: none !important;
 		color: white !important;
